feat: Windows 使用 DPAPI 保护连接密码